# spring-ai-mcp-elicitation-demo

./: .dockerignore  .gitignore  CORE.md  Dockerfile.server  README.md  STATUS.md  build.gradle.kts  settings.gradle.kts  test-agentcore.sh
client/: build.gradle.kts
client/src/main/java/com/jamesward/springaimcpdemo/: AgentCoreAuthConfig.java  Application.java
client/src/main/resources/: application.properties
infrastructure/: app.py  cdk.json  get_token.py  mcp_server_stack.py  pyproject.toml
infrastructure/infra_utils/: __init__.py  agentcore_role.py
server/: build.gradle.kts
server/src/main/java/com/jamesward/springaimcpdemo/: AgentCoreHealthController.java  Application.java  SimpleLoggerAdvisor.java
server/src/main/resources/: application.properties  flights.json
server/src/test/java/com/jamesward/springaimcpdemo/: TestApplication.java
server/src/test/resources/: application.properties
